--- a/.github/workflows/test-variables.yml
+++ b/.github/workflows/test-variables.yml
@@ -8,8 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: step1
-      run: echo "var1=yellow" >> "$GITHUB_ENV"
-    - name: step2
+      id: step1
+      run: |
+        echo "var1=yellow" >> "$GITHUB_ENV"
+        echo "var2=green" >> "$GITHUB_OUTPUT"
+    - name: step2      
       run: |
         printf '%s\n' "$var1"
         printf '%s\n' "${{ env.var1 }}"
+        printf '%s\n' "${{ steps.step1.outputs.var2 }}"
